[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/ui/end/begin.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/end/Minigame.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/EndClick2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/ui/end/time_brackets.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/end/time_progress.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/EndClick.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/ui/end/loading1.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/end/loading0.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/end/loading2.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/end/loading6.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/end/loading3.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/end/loading5.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/end/loading4.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/end/loading7.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/end/check.png" type="Texture" id=15]
[ext_resource path="res://assets/audio/EndSuccess.wav" type="AudioStream" id=16]

[sub_resource type="AnimatedTexture" id=1]
frames = 8
fps = 6.0
frame_0/texture = ExtResource( 8 )
frame_1/texture = ExtResource( 7 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 9 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 11 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 13 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 12 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 10 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 14 )
frame_7/delay_sec = 0.0

[node name="Minigame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeProgress" type="TextureProgress" parent="."]
visible = false
margin_left = 131.0
margin_top = 39.0
margin_right = 173.0
margin_bottom = 45.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 21, 3 )
step = 0.01
value = 100.0
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brackets" type="TextureRect" parent="TimeProgress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -6.0
margin_right = 24.0
margin_bottom = 6.0
rect_pivot_offset = Vector2( 24, 6 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 11.0
margin_bottom = 6.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 152, 85 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 152.0
margin_top = 83.0
margin_right = 152.0
margin_bottom = 83.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Begin" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.5
margin_top = -5.0
margin_right = 16.5
margin_bottom = 5.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 16, 5 )
texture_normal = ExtResource( 1 )

[node name="Loading" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -11.5
margin_right = 12.0
margin_bottom = 12.5
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 12, 12 )
mouse_filter = 2
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Check" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -11.5
margin_right = 12.0
margin_bottom = 12.5
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 12, 12 )
mouse_filter = 2
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="BeginAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.6
bus = "SFX"

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -8.0
bus = "SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true
[connection signal="pressed" from="Begin" to="." method="_on_Begin_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
